Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-29218

Syntax highlighting is not working well

XMLWordPrintable

    • All
    • 8241fc87b (11.0)

      The class name is not highlighted correctly.
      On the left you have qtc 10 on the right you have qtc 11

        1. image-2023-05-30-09-04-41-459.png
          image-2023-05-30-09-04-41-459.png
          129 kB
        2. screenshot-1.png
          screenshot-1.png
          61 kB
        3. testSH.tar.bz2
          1 kB
        For Gerrit Dashboard: QTCREATORBUG-29218
        # Subject Branch Project Status CR V

            kandeler Christian Kandeler
            taipan BogDan Vatra
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes